# rust-prac-discord-bot

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs  strings.rs
