[package]
name = "rust-prac-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["client", "gateway", "framework", "model"]

[dependencies.tokio]
version = "1.16.1"
features = ["macros", "rt-multi-thread"]
