[package]
name = "rust-prac-discord-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["xiurobert"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["client", "gateway", "model", "rustls_backend", "cache"]

[dependencies.tokio]
version = "1.16.1"
features = ["macros", "rt-multi-thread"]
